fix: style the component as align and direction of components

--- a/DOM/challenge/DOM/style.css
+++ b/DOM/challenge/DOM/style.css
@@ -31,12 +31,11 @@ main {
 }
 
 .country {
-  flex: auto;
-  /* justify-content: space-between */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 10px;
-  flex-direction: row;
-  background-color: red;
-  /* background-color: #e9e9e9; */
+  background-color: #e9e9e9;
   border-radius: 3px;
   transition: background-color 0.2s;
 }
@@ -61,9 +60,7 @@ main {
 }
 
 .btn-delete {
-  flex-direction: row;
-  justify-content: end;
-  width: 25px;
-  background-color: #0056b3;
+  width: 20px;
+  height: 20px;
   cursor: pointer;
 }
